- Upgrade interface for better page/post selection. - Add unique postfix to CSS class to avoid conflict.  - Fix input field display error in Firefox when input[type="text"] has height defined.  - Fix input field stretches outside border when class 'content' has width defined. - Add non-inline mode for themes that do not implement the wp_head function. - Add PHP version check and provide warning if PHP version is less than 5.3
git-svn-id: https://plugins.svn.wordpress.org/popupally/trunk@880140 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/resource/backend/popup-simple-preview.css
+++ b/resource/backend/popup-simple-preview.css
@@ -1,5 +1,5 @@
-.clear {clear: both; height:0px; width: 100;}
-.fancybox-outer {
+.clear-sxzw {clear: both; height:0px; width: 100;}
+.fancybox-outer-sxzw{
 width:650px;
 background-color:#FFFFFF;
 -webkit-box-shadow: 0 10px 25px rgba(0,0,0,0.5);
@@ -9,12 +9,15 @@ box-shadow: 0 10px 25px rgba(0,0,0,0.5);
 -moz-border-radius: 4px;
 border-radius: 4px;
 }
-.fancybox-inner{overflow:visible;height:auto;padding:20px;text-align:center;}
-.fancybox-inner .content {
+.fancybox-inner-sxzw{overflow:visible;height:auto;padding:20px;text-align:center;}
+.fancybox-inner-sxzw .content-sxzw {
 text-align: center;
 vertical-align: middle;
+width:100%;
+box-sizing:border-box;
+-moz-box-sizing:border-box;
 }
-.fancybox-inner .desc {
+.fancybox-inner-sxzw .desc-sxzw {
 font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 font-size: 28px;
 line-height: 30px;
@@ -22,8 +25,9 @@ font-weight: bold;
 margin: 0 0 10px 0;
 box-sizing:border-box;
 -moz-box-sizing:border-box;
+cursor:pointer;
 }
-.fancybox-inner .field {
+.fancybox-inner-sxzw .field-sxzw {
 display:block;
 padding:15px 12px;
 margin:0 auto 10px auto;
@@ -41,8 +45,9 @@ box-shadow: 0 1px 0 rgba(255,255,255,0.67),inset 0 1px 3px rgba(5,5,5,0.13);
 border-radius: 3px;
 box-sizing:border-box;
 -moz-box-sizing:border-box;
+height:auto;
 }
-.fancybox-inner .submit {
+.fancybox-inner-sxzw .submit-sxzw {
 font-family: Arial, Helvetica, sans-serif;
 font-size: 22px;
 line-height:27px;
@@ -65,7 +70,7 @@ margin: 10px auto;
 box-sizing:border-box;
 -moz-box-sizing:border-box;
 }
-.fancybox-inner .privacy{
+.fancybox-inner-sxzw .privacy-sxzw{
 font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 font-size:14px;
 line-height:14px;
@@ -74,18 +79,18 @@ padding:0;
 box-sizing:border-box;
 -moz-box-sizing:border-box;
 }
-.logo-row {
+.fancybox-inner-sxzw .logo-row-sxzw {
 	margin: 20px 0;
 }
-.logo-img {
+.fancybox-inner-sxzw .logo-img-sxzw {
 	height: 120px;
 	margin: 0 20px 0 0;
 	float: left;
 }
-.logo-text {
-height: 100%;
-width: 100%;
-vertical-align: top;
+.fancybox-inner-sxzw .logo-text-sxzw {
+	height: 100%;
+	width: 100%;
+	vertical-align: top;
 text-align: left;
 font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 font-size: 24px;
@@ -96,22 +101,22 @@ box-sizing:border-box;
 -moz-box-sizing:border-box;
 }
 @media (max-width: 768px) {
-	.fancybox-outer{width:480px;}
-	.fancybox-inner .desc{font-size:24px;line-height:26px;}
-	.fancybox-inner .field {padding:10px 10px;font-size: 12px;line-height: 18px;margin-bottom:7px;}
-	.fancybox-inner .submit {font-size: 18px;padding:10px 0;margin-top:8px;margin-bottom:8px;}
-	.fancybox-inner .privacy{font-size:10px;line-height:10px;}
-	.logo-row {height:80px;margin:15px 0;}
-	.logo-img {height:80px;width:80px;margin:0 15px 0 0;}
-	.logo-text {font-size:20px;line-height:22px;}
+	.fancybox-outer-sxzw{width:480px;}
+	.fancybox-inner-sxzw .desc-sxzw{font-size:24px;line-height:26px;}
+	.fancybox-inner-sxzw .field-sxzw{padding:10px 10px;font-size: 12px;line-height: 18px;margin-bottom:7px;}
+	.fancybox-inner-sxzw .submit-sxzw{font-size: 18px;padding:10px 0;margin-top:8px;margin-bottom:8px;}
+	.fancybox-inner-sxzw .privacy-sxzw{font-size:10px;line-height:10px;}
+	.fancybox-inner-sxzw .logo-row-sxzw {height:80px;margin:15px 0;}
+	.fancybox-inner-sxzw .logo-img-sxzw {height:80px;width:80px;margin:0 15px 0 0;}
+	.fancybox-inner-sxzw .logo-text-sxzw {font-size:20px;line-height:22px;}
 }
 @media (max-width: 520px) {
-	.fancybox-outer{width:300px;}
-	.fancybox-inner .desc{font-size:18px;line-height:20px;}
-	.fancybox-inner .field {padding:10px 6px;font-size: 10px;line-height: 14px;margin-bottom:5px;}
-	.fancybox-inner .submit {font-size: 16px;padding:8px 0;margin-top:4px;margin-bottom:4px;}
-	.fancybox-inner .privacy{font-size:8px;line-height:8px;}
-	.logo-row {height:60px;margin:10px 0;}
-	.logo-img {height:60px;width:60px;margin:0 10px 0 0;}
-	.logo-text {font-size:12px;line-height:14px;}
+	.fancybox-outer-sxzw{width:300px;}
+	.fancybox-inner-sxzw .desc-sxzw{font-size:18px;line-height:20px;}
+	.fancybox-inner-sxzw .field-sxzw{padding:10px 6px;font-size: 10px;line-height: 14px;margin-bottom:5px;}
+	.fancybox-inner-sxzw .submit-sxzw{font-size: 16px;padding:8px 0;margin-top:4px;margin-bottom:4px;}
+	.fancybox-inner-sxzw .privacy-sxzw{font-size:8px;line-height:8px;}
+	.fancybox-inner-sxzw .logo-row-sxzw{height:60px;margin:10px 0;}
+	.fancybox-inner-sxzw .logo-img-sxzw{height:60px;width:60px;margin:0 10px 0 0;}
+	.fancybox-inner-sxzw .logo-text-sxzw{font-size:12px;line-height:14px;}
 }
